# postro

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  abstraction.md  build-all
codegen/: Cargo.toml  download.sh
codegen/src/: errcode.rs  main.rs  parser.rs  pg.rs  pg_type.rs
example/: Cargo.toml
example/src/: connection.rs  decode.rs  error.rs  from_row.rs  main.rs  query.rs  readme.rs  table.rs
postgres-protocol/: Cargo.toml
postgres-protocol/src/: lib.rs
postgres-protocol/src/authentication/: mod.rs  sasl.rs
postgres-protocol/src/escape/: mod.rs
postgres-protocol/src/message/: backend.rs  frontend.rs  mod.rs
postgres-protocol/src/password/: mod.rs
postgres-protocol/src/types/: mod.rs
postgres-types/: Cargo.toml
postgres-types/src/: lib.rs  pg_lsn.rs  type_gen.rs
postro/: Cargo.toml
postro-macros/: Cargo.toml
postro-macros/src/: decode.rs  from_row.rs  lib.rs  table.rs
postro/src/: connection.rs  encode.rs  error.rs  executor.rs  fetch.rs  lib.rs  phase.rs  pool.rs  query.rs  row.rs  sql.rs  statement.rs  transaction.rs  transport.rs  value.rs
postro/src/common/: bytestr.rs  mod.rs
postro/src/connection/: config.rs
postro/src/ext/: mod.rs
postro/src/io/: mod.rs
postro/src/net/: socket.rs
postro/src/pool/: config.rs  worker.rs
postro/src/postgres/: backend.rs  notice.rs  pg_type.rs
postro/src/query/: execute.rs  fetch_all.rs  fetch_one.rs  fetch_stream.rs  ops.rs  portal.rs
postro/src/types/: json.rs  mod.rs  time.rs
qs/: Cargo.toml
qs/src/: column.rs  connection.rs  dberror.rs  decode.rs  encode.rs  error.rs  executor.rs  io.rs  lib.rs  options.rs  pool.rs  protocol.rs  query.rs  row.rs  sql.rs  statement.rs  stream.rs  transaction.rs  transport.rs  value.rs
qs/src/common/: bytestr.rs  inlinevec.rs  mod.rs  stack.rs  url.rs
qs/src/connection/: config.rs  error.rs  startup.rs
qs/src/decode/: error.rs
qs/src/ext/: mod.rs
qs/src/io/: mod.rs  poll.rs  read_buf.rs  write_all.rs
qs/src/message/: backend.rs  codec.rs  decoder.rs  ext.rs  frontend.rs  mod.rs
qs/src/net/: mod.rs  socket.rs
qs/src/options/: error.rs  startup.rs
qs/src/pool/: config.rs  worker.rs
qs/src/postgres/: backend.rs  error.rs  ext.rs  frontend.rs  mod.rs  notice.rs  pg_format.rs  pg_type.rs
qs/src/postgres/error/: database.rs
qs/src/query/: execute.rs  fetch.rs  fetch_all.rs  fetch_one.rs  fetch_stream.rs  helpers.rs  ops.rs  portal.rs
qs/src/statement/: mod.rs
qscv-core/: Cargo.toml
qscv-core-legacy/: Cargo.toml
qscv-core-legacy/src/: acquire.rs  arguments.rs  column.rs  encode.rs  error.rs  from_row.rs  pool.rs  query.rs  query_scalar.rs  row.rs  rt.rs  statement.rs  sync.rs  type_info.rs  types.rs
qscv-core-legacy/src/ext/: mod.rs
qscv-core-legacy/src/io/: decode.rs  mod.rs  read_buf.rs
qscv-core-legacy/src/migration/: migration_type.rs  mod.rs  source.rs
qscv-core-legacy/src/net/: mod.rs
qscv-core-legacy/src/pool/: close_event.rs  connection.rs  executor.rs  maybe.rs
qscv-core/src/: connection.rs  database.rs  decode.rs  describe.rs  error.rs  executor.rs  from_row.rs  lib.rs  pool.rs  query.rs  query_as.rs  query_scalar.rs  rt.rs  statement.rs  sync.rs  transaction.rs  value.rs
qscv-core/src/ext/: async_stream.rs  ustr.rs
qscv-core/src/io/: buf.rs  buf_mut.rs  encode.rs
qscv-core/src/migrate/: error.rs  mod.rs
qscv-core/src/migration/: migrate.rs  migration.rs  migrator.rs
qscv-core/src/net/socket/: buffered.rs  mod.rs
qscv-core/src/pool/: connection.rs  executor.rs  inner.rs  maybe.rs  options.rs
qscv-postgres/: Cargo.toml
qscv-postgres/src/: connection.rs  encode.rs  error.rs  io.rs  lib.rs  options.rs  protocol.rs  raw_row.rs  row_buffer.rs  rt.rs  statement.rs  stream.rs  types.rs  value.rs
qscv-postgres/src/common/: bytestr.rs  general.rs  mod.rs  url.rs
qscv-postgres/src/connection/: stream.rs
qscv-postgres/src/message/: authentication.rs  backend.rs  error.rs  ext.rs  frontend.rs  mod.rs
qscv-postgres/src/message/error/: database.rs
qscv-postgres/src/net/: buffered.rs  mod.rs  socket.rs
qscv-postgres/src/options/: startup.rs
qscv-postgres/src/postgres/: connection.rs  message.rs  mod.rs  options.rs  stream.rs
qscv-postgres/src/postgres/message/: authentication.rs  backend.rs  frontend.rs  mod.rs  startup.rs
src/: lib.rs
src/error/: mod.rs  sqlstate.rs
