[workspace]
members = ["postro", "postro-macros", "example"]
default-members = ["postro"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ariaandika"]
repository = "https://github.com/ariaandika/postro"
readme = "README.md"
license = "MIT"
keywords = ["postgres","sql"]
categories = ["database"]

