[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
postro = { version = "0.1.1", path = "../postro", features = ["tokio", "log", "macros", "verbose", "json", "time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["std"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
