[package]
name = "postro-macros"
description = "Postro Proc Macro"
documentation = "https://docs.rs/postro"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.101"

