[package]
name = "postro"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures-core = "0.3.31"
itoa = "1.0.15"
log = { version = "0.4.27", optional = true }
lru = { version = "0.13.0", default-features = false }
pin-project-lite = "0.2.16"
postro-macros = { version = "0.1.0", path = "../postro-macros", optional = true }
tokio = { version = "1.44.1", optional = true, features = ["io-util","net","sync","time","rt"] }

[features]
migration = []
tokio = ["dep:tokio"]
log = ["dep:log"]
log-verbose = ["log"]
macros = ["dep:postro-macros"]
