[package]
name = "postro"
description = "Asynchronous Postgres Driver and Utility"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes = "1.10.1"
futures-core = "0.3.31"
itoa = "1.0.15"
log = { version = "0.4.27", optional = true }
lru = { version = "0.13.0", default-features = false }
pin-project-lite = "0.2.16"
postro-macros = { version = "0.1.0", path = "../postro-macros", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
time = { version = "0.3.41", optional = true, features = ["formatting", "parsing"] }
tokio = { version = "1.44.1", optional = true, features = [
  # TcpStream & TcpSocket
  "net",
  # Worker
  "rt", "sync", "time"
] }
tracing = { version = "0.1.41", optional = true }

[features]
default = ["tokio","macros"]

migration = []
tokio = ["dep:tokio"]
macros = ["dep:postro-macros"]

serde = ["dep:serde"]
json = ["serde","dep:serde_json"]

log = ["dep:log"]
verbose = ["dep:tracing"]
time = ["dep:time"]
