[package]
name = "qs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
itoa = "1.0.15"
lru = { version = "0.13.0", default-features = false }
pin-project-lite = "0.2.16"
thiserror = "2.0.12"
tokio = { version = "1.44.1", optional = true, features = ["io-util","net","sync","time","rt"] }

[features]
migration = []
tokio = ["dep:tokio"]
