[package]
name = "qscv-core-legacy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
crossbeam-queue = "0.3.12"
either = "1.15.0"
event-listener = "5.4.0"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "sink", "io"] }
log = "0.4.26"
memchr = "2.7.4"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", optional = true, features = ["io-util","net","sync","time","rt"] }

[features]
migration = []
tokio = ["dep:tokio"]
