[package]
name = "qscv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "sink", "io"] }
memchr = "2.7.4"
thiserror = "2.0.12"
tokio = { version = "1.44.1", optional = true }

[features]
migrate = []
tokio = ["dep:tokio","tokio/io-util","tokio/net"]
